# 20260706-leuven-gw-workshop-gwmock

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cliff.toml  index.html  pyproject.toml
.github/workflows/: codeql.yml  scheduled-release.yml
css/: custom.css
materials/: README.md
materials/notebooks/: 00-installation-setup.ipynb  01-quickstart-mdc.ipynb  02-populations.ipynb  03-signals.ipynb  04-noise.ipynb  05-end-to-end.ipynb
slides/: 01-title.md  02-what-is-gwmock.md  03-at-a-glance.md  04-today-toolbox.md  05-plan.md  06-follow-along.md  07-lets-go.md
