[project]
name = "gwmock-leuven-workshop"
version = "0.1.0"
authors = [{ name = "Isaac C. F. Wong" }]
description = "Slides and hands-on notebooks for the gwmock hands-on session at the Leuven GW Workshop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  # The workshop runtime: gwmock with the SGWB extra, plus the three companion
  # packages (declared explicitly so version pins are visible in one place).
  "gwmock[sgwb]==0.9.0",
  "gwmock-signal==0.9.3",
  "gwmock-noise==0.6.1",
  "gwmock-pop==0.10.3",
  # Tools used by the notebooks.
  "jupyterlab>=4",
  "matplotlib>=3.8",
  "nbconvert>=7",
  "ipykernel>=7.3.0",
]

[dependency-groups]
dev = ["prek>=0.4.6"]
release = ["git-cliff>=2.13.1"]

# This repository is a materials bundle (slides + notebooks), not an installable
# Python package — tell uv to manage the environment without trying to build it.
[tool.uv]
package = false
